# soc-android

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: cibuild.yml  labeler.yml  mirror.yml  stylecheck.yml
cmake/: XRay.Compiler.GNULike.cmake  XRay.Macro.cmake
src/xrAICore/Navigation/: game_graph_script.cpp
src/xrGame/: UIGameCustom.cpp
src/xrGame/ui/: UIMapList.cpp
